--- a/project_b/Gemfile
+++ b/project_b/Gemfile
@@ -7,5 +7,9 @@ gem "rake", "~> 12.0"
 gem "rspec", "~> 3.0"
 
 # Using Sorbet because it's updated almost daily
-gem "sorbet", "0.5.10346", group: :development
+group :development do
+  gem "sorbet", "0.5.10346"
+  gem "sorbet-static", "0.5.10346"
+end
+
 gem "sorbet-runtime", "0.5.10346"
